compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:64>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256:64>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

function go() {
  return toBitArray([sizedInt(256n, 64n, true)]);
}
