compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:16-little>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256:16-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

function go() {
  return toBitArray([sizedInt(256n, 16n, false)]);
}
