compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__two.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256, 4>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256, 4>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

function go() {
  return toBitArray([256n, 4n]);
}
